<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.ashlee.unitconverter.MainActivity">

    <EditText
        android:id="@+id/valueToConvert"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:inputType="number"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/spinnerSelect1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/valueToConvert"
        android:entries="@array/unitNames2"
        android:prompt="@string/selectUnit">
    </Spinner>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/valueToConvert"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_horizontal"
        android:text="@string/midText"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerSelect2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="20dp"
        android:entries="@array/unitNames1"
        android:gravity="center"
        android:prompt="@string/selectUnit">

    </Spinner>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinnerSelect2"
        android:layout_marginTop="20dp"
        android:text="@string/submitText" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/submitButton"
        android:layout_marginTop="9dp"
        android:background="@android:color/holo_blue_dark"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/resultText"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/result"
        android:backgroundTint="?attr/colorPrimaryDark"
        android:onClick="settingsScreen"
        android:text="@string/settingsText"
        android:textColor="@android:color/background_light"
        android:textSize="12sp" />


</RelativeLayout>